// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`latLng , 16.413690 throws an error 1`] = `
"'coordinates' must contain a valid latitude/longitude coordinate pair, for instance '48.2093723, 16.356099'.

   Line | Content
 >    1 | coordinates: , 16.413690
"
`;

exports[`latLng 48,205870, 16,413690 throws an error 1`] = `
"'coordinates' must contain a valid latitude/longitude coordinate pair, for instance '48.2093723, 16.356099'.

   Line | Content
 >    1 | coordinates: 48,205870, 16,413690
"
`;

exports[`latLng 48.205870, throws an error 1`] = `
"'coordinates' must contain a valid latitude/longitude coordinate pair, for instance '48.2093723, 16.356099'.

   Line | Content
 >    1 | coordinates: 48.205870,
"
`;
